--- a/prototype/manifest.json
+++ b/prototype/manifest.json
@@ -2,24 +2,29 @@
   "name": "OITH - One In The Hand",
   "short_name": "OITH",
   "description": "A bird in the hand is worth two in the bush - One quality match at a time",
-  "start_url": "/OITH/",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#FAF7F2",
   "theme_color": "#C4584A",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "src": "icons/icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "icons/icon.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icons/icon.svg",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/svg+xml",
+      "purpose": "maskable"
     }
   ]
 }
-
