--- a/prototype/server/package.json
+++ b/prototype/server/package.json
@@ -5,7 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest",
+    "test:unit": "jest --testPathPattern=__tests__/(?!integration)",
+    "test:integration": "jest --testPathPattern=__tests__/integration",
+    "test:matching": "jest --testPathPattern=__tests__/matching",
+    "test:users": "jest --testPathPattern=__tests__/users",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:verbose": "jest --verbose"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.400.0",
@@ -20,7 +28,30 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "coverage",
+    "collectCoverageFrom": [
+      "routes/**/*.js",
+      "lambda/**/*.mjs",
+      "!**/node_modules/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 70,
+        "functions": 75,
+        "lines": 80,
+        "statements": 80
+      }
+    },
+    "testMatch": [
+      "**/__tests__/**/*.test.js"
+    ],
+    "verbose": true
   }
 }
 
