--- a/prototype/server/package.json
+++ b/prototype/server/package.json
@@ -19,6 +19,7 @@
     "@aws-sdk/client-dynamodb": "^3.400.0",
     "@aws-sdk/client-s3": "^3.400.0",
     "@aws-sdk/lib-dynamodb": "^3.400.0",
+    "@aws-sdk/node-http-handler": "^3.370.0",
     "@aws-sdk/s3-request-presigner": "^3.400.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -54,4 +55,3 @@
     "verbose": true
   }
 }
-
